--- a/badges.css
+++ b/badges.css
@@ -528,3 +528,43 @@
     z-index: -1;
     transition: 0.4s;
 }
+
+/* Chicbreeze */
+#chat-messages .id-42616838 .badge-box {
+    width: 30px;
+    height: 30px;
+    transition: 0.5s;
+}
+
+#chat-messages .id-42616838 .badge-box:hover {
+    width: 65px;
+    height: 65px;
+    transition: 0.5s;
+}
+
+/*User Badge*/
+#user-rollover.id-42616838 .badge-box i.bdg,
+#chat-messages .id-42616838 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/EcsXyfP.png");
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    background-position: initial;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+/*User Background*/
+.cm.id-42616838::before {
+    background-image: url("");
+    background-repeat: no-repeat;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.1;
+    z-index: -1;
+    transition: 0.4s;
+}
