--- a/badges.css
+++ b/badges.css
@@ -545,7 +545,7 @@
 /*User Badge*/
 #user-rollover.id-42616838 .badge-box i.bdg,
 #chat-messages .id-42616838 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/EcsXyfP.png");
+    background-image: url("https://i.imgur.com/k0FbpRn.png");
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -596,6 +596,46 @@
 }
 /*User Background*/
 .cm.id-37174830::before {
+    background-image: url("");
+    background-repeat: no-repeat;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.1;
+    z-index: -1;
+    transition: 0.4s;
+}
+
+/* Haise */
+#chat-messages .id-38607903 .badge-box {
+    width: 30px;
+    height: 30px;
+    transition: 0.5s;
+}
+
+#chat-messages .id-38607903 .badge-box:hover {
+    width: 65px;
+    height: 65px;
+    transition: 0.5s;
+}
+
+/*User Badge*/
+#user-rollover.id-38607903 .badge-box i.bdg,
+#chat-messages .id-38607903 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/vUhnTA4.png");
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    background-position: initial;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+/*User Background*/
+.cm.id-38607903::before {
     background-image: url("");
     background-repeat: no-repeat;
     content: "";
