--- a/Test/main.css
+++ b/Test/main.css
@@ -1,4 +1,4 @@
-@import url("https://raw.githack.com/ejox/xQcJungle.github.io/master/Test/badges.css");
+@import url("https://raw.githack.com/ejox/xQcJungle.github.io/master/badges.css");
 
 /* main */
 /* Icon fix :before */
@@ -82,7 +82,7 @@ div.message > div.msg > div.from > span.un {
 /* Inline */
 #chat .emote {
     min-height: 0px !important;
-    background: rgba(34, 44, 62, 0.78) !important;
+    background: rgba(0, 0, 0, 0.0) !important;
 }
 
 .emote .msg .text {
@@ -120,9 +120,6 @@ div.message > div.msg > div.from > span.un {
 
 .emote.role-admin .text {
     color: #ff2d2d;
-}
-#chat .cm:nth-child(2n+1) {
-    background-color: #000000;
 }
 
 #chat .cm.emote .icon,
@@ -290,22 +287,49 @@ div.message > div.msg > div.from > span.un {
 #chat [data-cid^="3941421-"] span.un.clickable {
     animation: rainbow 1s infinite;
 }
-/*
+
+/* SlyVII */
+#user-rollover.id-11556348 .username,
+#chat [data-cid^="11556348-"] span.un.clickable {
+    animation: staticred 1s infinite;
+}
+
+/* Chicbreeze */
+#user-rollover.id-42616838 .username,
+#chat [data-cid^="42616838-"] span.un.clickable {
+    animation: staticbeige 1s infinite;
+}
+
+/* Ageless */
+#user-rollover.id-37174830 .username,
+#chat [data-cid^="37174830-"] span.un.clickable {
+    animation: bouncer 1s infinite;
+}
+
+/* frynaut */
+#user-rollover.id-424349 .username,
+#chat [data-cid^="424349-"] span.un.clickable {
+    animation: bouncer 1s infinite;
+}
+
+/* AnUglyTurtle */
+#user-rollover.id-5049254 .username,
+#chat [data-cid^="5049254-"] span.un.clickable {
+    animation: staticpurple 1s infinite;
+}
+/* #90b0cf
 #user-rollover.id-3941421 .info .role span:after {
     content: '';
 }
-
 .id-3941421 .msg .from i.icon-chat-bouncer,
 #waitlist .list .user[data-uid="3941421"] .meta.is-staff .name .icon-chat-bouncer,
 #user-rollover.id-3941421 .info .role i.icon-chat-bouncer,
 #user-lists .list.room .user.id-3941421 .icon-chat-bouncer {
     background: url("") no-repeat !important;
 }
-
 #user-rollover.id-3941421 .meta .thumb {
     border-color: #90b0cf !important;
 }
-
 .id-3941421 .msg .from.bouncer .un,
 .id-3941421 .from .un,
 #chat [data-cid^="3941421-"] span.un.clickable,
@@ -331,31 +355,350 @@ div.message > div.msg > div.from > span.un {
 }
 */
 
+/* BounceBot */
+#user-rollover.id-40471126 .username,
+#chat [data-cid^="40471126-"] span.un.clickable {
+    color: #f6ff00 !important;
+}
+
+#user-rollover.id-40471126 .info .role span:before {
+    content: 'Bot / ';
+}
+
+.id-40471126 .msg .from i.icon-chat-bouncer,
+#waitlist .list .user[data-uid="40471126"] .meta.is-staff .name .icon-chat-bouncer,
+#user-rollover.id-40471126 .info .role i.icon-chat-bouncer,
+#user-lists .list.room .user.id-40471126 .icon-chat-bouncer {
+    background: url("https://i.imgur.com/L8DFnWd.png") no-repeat !important;
+}
+
+#user-rollover.id-40471126 .meta .thumb {
+    border-color: #f6ff00 !important;
+}
+
+.id-40471126 .msg .from.bouncer .un,
+.id-40471126 .from .un,
+#chat [data-cid^="40471126"] span.un.clickable,
+#waitlist .list .user[data-uid="40471126"] .meta.is-staff .name .icon-chat-bouncer + span,
+#user-rollover.id-40471126 .info .role span,
+#user-rollover.id-40471126 .meta .username,
+#user-lists .list.room .user.id-40471126 .name {
+    color: #f6ff00 !important;
+}
+#chat .cm.message.id-40471126,
+#chat .cm.emote.id-40471126 {
+    border-left: #f6ff00 2px dotted !important;
+    border-right: #f6ff00 2px dotted !important;
+    border-top: #f6ff00 2px dotted !important;
+    border-bottom: #f6ff00 2px dotted !important;
+}
+#chat .cm.message.id-40471126:hover,
+#chat .cm.emote.id-40471126:hover {
+    border-left-style: solid !important;
+    border-right-style: solid !important;
+    border-top-style: solid !important;
+    border-bottom-style: solid !important;
+    display: inline-block !important;
+}
+.emote.id-40471126 .text {
+    color: #f6ff00 !important;
+}
+
+/* MoistSalt */
+#user-rollover.id-37224716 .username,
+#chat [data-cid^="37224716-"] span.un.clickable {
+    color: #14b866 !important;
+}
+
+#user-rollover.id-37224716 .info .role span:before {
+    content: 'Twitch Mod / ';
+}
+
+.id-37224716 .msg .from i.icon-chat-manager,
+#waitlist .list .user[data-uid="37224716"] .meta.is-staff .name .icon-chat-manager,
+#user-rollover.id-37224716 .info .role i.icon-chat-manager,
+#user-lists .list.room .user.id-37224716 .icon-chat-manager {
+    background: url("https://i.imgur.com/tAGatAc.png") no-repeat !important;
+}
+
+#user-rollover.id-37224716 .meta .thumb {
+    border-color: #14b866 !important;
+}
+
+.id-37224716 .msg .from.manager .un,
+.id-37224716 .from .un,
+#chat [data-cid^="37224716"] span.un.clickable,
+#waitlist .list .user[data-uid="37224716"] .meta.is-staff .name .icon-chat-manager + span,
+#user-rollover.id-37224716 .info .role span,
+#user-rollover.id-37224716 .meta .username,
+#user-lists .list.room .user.id-37224716 .name {
+    color: #14b866 !important;
+}
+#chat .cm.message.id-37224716,
+#chat .cm.emote.id-37224716 {
+    border-left: #14b866 3px dotted !important;
+    border-right: #14b866 3px dotted !important;
+}
+#chat .cm.message.id-37224716:hover,
+#chat .cm.emote.id-37224716:hover {
+    border-left-style: solid !important;
+    border-right-style: solid !important;
+    display: inline-block !important;
+}
+.emote.id-37224716 .text {
+    color: #14b866 !important;
+}
+
+/* Baddra93 */
+#user-rollover.id-38773628 .username,
+#chat [data-cid^="38773628-"] span.un.clickable {
+    color: #14b866 !important;
+}
+
+#user-rollover.id-38773628 .info .role span:before {
+    content: 'Twitch Mod / ';
+}
+
+.id-38773628 .msg .from i.icon-chat-manager,
+#waitlist .list .user[data-uid="38773628"] .meta.is-staff .name .icon-chat-manager,
+#user-rollover.id-38773628 .info .role i.icon-chat-manager,
+#user-lists .list.room .user.id-38773628 .icon-chat-manager {
+    background: url("https://i.imgur.com/tAGatAc.png") no-repeat !important;
+}
+
+#user-rollover.id-38773628 .meta .thumb {
+    border-color: #14b866 !important;
+}
+
+.id-38773628 .msg .from.manager .un,
+.id-38773628 .from .un,
+#chat [data-cid^="38773628"] span.un.clickable,
+#waitlist .list .user[data-uid="38773628"] .meta.is-staff .name .icon-chat-manager + span,
+#user-rollover.id-38773628 .info .role span,
+#user-rollover.id-38773628 .meta .username,
+#user-lists .list.room .user.id-38773628 .name {
+    color: #14b866 !important;
+}
+#chat .cm.message.id-38773628,
+#chat .cm.emote.id-38773628 {
+    border-left: #14b866 3px dotted !important;
+    border-right: #14b866 3px dotted !important;
+}
+#chat .cm.message.id-38773628:hover,
+#chat .cm.emote.id-38773628:hover {
+    border-left-style: solid !important;
+    border-right-style: solid !important;
+    display: inline-block !important;
+}
+.emote.id-38773628 .text {
+    color: #14b866 !important;
+}
+
+/* HandsomeWalnut */
+#user-rollover.id-37633188 .username,
+#chat [data-cid^="37633188-"] span.un.clickable {
+    color: #14b866 !important;
+}
+
+#user-rollover.id-37633188 .info .role span:before {
+    content: 'Twitch Mod / ';
+}
+
+.id-37633188 .msg .from i.icon-chat-manager,
+#waitlist .list .user[data-uid="37633188"] .meta.is-staff .name .icon-chat-manager,
+#user-rollover.id-37633188 .info .role i.icon-chat-manager,
+#user-lists .list.room .user.id-37633188 .icon-chat-manager {
+    background: url("https://i.imgur.com/tAGatAc.png") no-repeat !important;
+}
+
+#user-rollover.id-37633188 .meta .thumb {
+    border-color: #14b866 !important;
+}
+
+.id-37633188 .msg .from.manager .un,
+.id-37633188 .from .un,
+#chat [data-cid^="37633188"] span.un.clickable,
+#waitlist .list .user[data-uid="37633188"] .meta.is-staff .name .icon-chat-manager + span,
+#user-rollover.id-37633188 .info .role span,
+#user-rollover.id-37633188 .meta .username,
+#user-lists .list.room .user.id-37633188 .name {
+    color: #14b866 !important;
+}
+#chat .cm.message.id-37633188,
+#chat .cm.emote.id-37633188 {
+    border-left: #14b866 3px dotted !important;
+    border-right: #14b866 3px dotted !important;
+}
+#chat .cm.message.id-37633188:hover,
+#chat .cm.emote.id-37633188:hover {
+    border-left-style: solid !important;
+    border-right-style: solid !important;
+    display: inline-block !important;
+}
+.emote.id-37633188 .text {
+    color: #14b866 !important;
+}
+
+/* zostradamus */
+#user-rollover.id-37356990 .username,
+#chat [data-cid^="37356990-"] span.un.clickable {
+    color: #14b866 !important;
+}
+
+#user-rollover.id-37356990 .info .role span:before {
+    content: 'Twitch Mod / ';
+}
+
+.id-37356990 .msg .from i.icon-chat-host,
+#waitlist .list .user[data-uid="37356990"] .meta.is-staff .name .icon-chat-host,
+#user-rollover.id-37356990 .info .role i.icon-chat-host,
+#user-lists .list.room .user.id-37356990 .icon-chat-host {
+    background: url("https://i.imgur.com/tAGatAc.png") no-repeat !important;
+}
+
+#user-rollover.id-37356990 .meta .thumb {
+    border-color: #14b866 !important;
+}
+
+.id-37356990 .msg .from.host .un,
+.id-37356990 .from .un,
+#chat [data-cid^="37356990"] span.un.clickable,
+#waitlist .list .user[data-uid="37356990"] .meta.is-staff .name .icon-chat-host + span,
+#user-rollover.id-37356990 .info .role span,
+#user-rollover.id-37356990 .meta .username,
+#user-lists .list.room .user.id-37356990 .name {
+    color: #14b866 !important;
+}
+#chat .cm.message.id-37356990,
+#chat .cm.emote.id-37356990 {
+    border-left: #14b866 3px dotted !important;
+    border-right: #14b866 3px dotted !important;
+}
+#chat .cm.message.id-37356990:hover,
+#chat .cm.emote.id-37356990:hover {
+    border-left-style: solid !important;
+    border-right-style: solid !important;
+    display: inline-block !important;
+}
+.emote.id-37356990 .text {
+    color: #14b866 !important;
+}
+
+/* Hydration */
+#user-rollover.id-37149102 .username,
+#chat [data-cid^="37149102-"] span.un.clickable {
+    color: #14b866 !important;
+}
+
+#user-rollover.id-37149102 .info .role span:before {
+    content: 'Twitch Mod / ';
+}
+
+.id-37149102 .msg .from i.icon-chat-host,
+#waitlist .list .user[data-uid="37149102"] .meta.is-staff .name .icon-chat-host,
+#user-rollover.id-37149102 .info .role i.icon-chat-host,
+#user-lists .list.room .user.id-37149102 .icon-chat-host {
+    background: url("https://i.imgur.com/tAGatAc.png") no-repeat !important;
+}
+
+#user-rollover.id-37149102 .meta .thumb {
+    border-color: #14b866 !important;
+}
+
+.id-37149102 .msg .from.host .un,
+.id-37149102 .from .un,
+#chat [data-cid^="37149102"] span.un.clickable,
+#waitlist .list .user[data-uid="37149102"] .meta.is-staff .name .icon-chat-host + span,
+#user-rollover.id-37149102 .info .role span,
+#user-rollover.id-37149102 .meta .username,
+#user-lists .list.room .user.id-37149102 .name {
+    color: #14b866 !important;
+}
+#chat .cm.message.id-37149102,
+#chat .cm.emote.id-37149102 {
+    border-left: #14b866 3px dotted !important;
+    border-right: #14b866 3px dotted !important;
+}
+#chat .cm.message.id-37149102:hover,
+#chat .cm.emote.id-37149102:hover {
+    border-left-style: solid !important;
+    border-right-style: solid !important;
+    display: inline-block !important;
+}
+.emote.id-37149102 .text {
+    color: #14b866 !important;
+}
+
+/* kaanvict */
+#user-rollover.id-37149557 .username,
+#chat [data-cid^="37149557-"] span.un.clickable {
+    color: #14b866 !important;
+}
+
+#user-rollover.id-37149557 .info .role span:before {
+    content: 'Twitch Mod / ';
+}
+
+.id-37149557 .msg .from i.icon-chat-host,
+#waitlist .list .user[data-uid="37149557"] .meta.is-staff .name .icon-chat-host,
+#user-rollover.id-37149557 .info .role i.icon-chat-host,
+#user-lists .list.room .user.id-37149557 .icon-chat-host {
+    background: url("https://i.imgur.com/tAGatAc.png") no-repeat !important;
+}
+
+#user-rollover.id-37149557 .meta .thumb {
+    border-color: #14b866 !important;
+}
+
+.id-37149557 .msg .from.host .un,
+.id-37149557 .from .un,
+#chat [data-cid^="37149557"] span.un.clickable,
+#waitlist .list .user[data-uid="37149557"] .meta.is-staff .name .icon-chat-host + span,
+#user-rollover.id-37149557 .info .role span,
+#user-rollover.id-37149557 .meta .username,
+#user-lists .list.room .user.id-37149557 .name {
+    color: #14b866 !important;
+}
+#chat .cm.message.id-37149557,
+#chat .cm.emote.id-37149557 {
+    border-left: #14b866 3px dotted !important;
+    border-right: #14b866 3px dotted !important;
+}
+#chat .cm.message.id-37149557:hover,
+#chat .cm.emote.id-37149557:hover {
+    border-left-style: solid !important;
+    border-right-style: solid !important;
+    display: inline-block !important;
+}
+.emote.id-37149557 .text {
+    color: #14b866 !important;
+}
+
 /* xQc */
 #user-rollover.id-37147238 .username,
 #chat [data-cid^="37147238-"] span.un.clickable {
     animation: orangered 1s infinite;
 }
 
-#user-rollover.id-37147238 .info .role span:after {
-    content: ' / Streamer';
+#user-rollover.id-37147238 .info .role span:before {
+    content: 'Streamer / ';
 }
 
-.id-37147238 .msg .from i.icon-chat-co-host,
-#waitlist .list .user[data-uid="37147238"] .meta.is-staff .name .icon-chat-co-host,
-#user-rollover.id-37147238 .info .role i.icon-chat-co-host,
-#user-lists .list.room .user.id-37147238 .icon-chat-co-host {
-    background: url("https://i.imgur.com/IRkVPst.png") no-repeat !important;
+.id-37147238 .msg .from i.icon-chat-host,
+#waitlist .list .user[data-uid="37147238"] .meta.is-staff .name .icon-chat-host,
+#user-rollover.id-37147238 .info .role i.icon-chat-host,
+#user-lists .list.room .user.id-37147238 .icon-chat-host {
+    background: url("https://i.imgur.com/xyghfYC.png") no-repeat !important;
 }
 
 #user-rollover.id-37147238 .meta .thumb {
     border-color: #FF6100 !important;
 }
 
-.id-37147238 .msg .from.co-host .un,
+.id-37147238 .msg .from.host .un,
 .id-37147238 .from .un,
 #chat [data-cid^="37147238"] span.un.clickable,
-#waitlist .list .user[data-uid="37147238"] .meta.is-staff .name .icon-chat-co-host + span,
+#waitlist .list .user[data-uid="37147238"] .meta.is-staff .name .icon-chat-host + span,
 #user-rollover.id-37147238 .info .role span,
 #user-rollover.id-37147238 .meta .username,
 #user-lists .list.room .user.id-37147238 .name {
@@ -365,11 +708,15 @@ div.message > div.msg > div.from > span.un {
 #chat .cm.emote.id-37147238 {
     border-left: #FF6100 3px dotted !important;
     border-right: #FF6100 3px dotted !important;
+    border-top: #FF6100 3px dotted !important;
+    border-bottom: #FF6100 3px dotted !important;
 }
 #chat .cm.message.id-37147238:hover,
 #chat .cm.emote.id-37147238:hover {
     border-left-style: solid !important;
     border-right-style: solid !important;
+    border-top-style: solid !important;
+    border-bottom-style: solid !important;
     display: inline-block !important;
 }
 .emote.id-37147238 .text {
@@ -408,6 +755,8 @@ div.message > div.msg > div.from > span.un {
 }
 
 /* -- Chat Custom -- */
+
+/* Rainbow */
 @keyframes rainbow {
     0% { color: #ff0000; }
     10% { color: #ff8000; }
@@ -422,7 +771,22 @@ div.message > div.msg > div.from > span.un {
     100% { color: #ff0080; }
 }
 
-/* Fade to black */
+/* Bouncer #90b0cf */
+@keyframes bouncer {
+    0% { color: #90b0cf; }
+    10% { color: #90b0cf; }
+    20% { color: #90b0cf; }
+    30% { color: #90b0cf; }
+    40% { color: #90b0cf; }
+    50% { color: #90b0cf; }
+    60% { color: #90b0cf; }
+    70% { color: #90b0cf; }
+    80% { color: #90b0cf; }
+    90% { color: #90b0cf; }
+    100% { color: #90b0cf; }
+}
+
+/* Fade to Black */
 @keyframes fadedblack {
     0% { color: #69ddff; }
     10% { color: #54b1cc; }
@@ -452,7 +816,7 @@ div.message > div.msg > div.from > span.un {
     100% { color: #ff0000; }
 }
 
-/* Fade between red and orange */
+/* Fade between Red and orange */
 @keyframes orangered {
     0% { color: #FF6100; }
     10% { color: #FF6100; }
@@ -482,22 +846,22 @@ div.message > div.msg > div.from > span.un {
     100% { color: #90b0cf; }
 }
 
-/* Static red */
+/* SlyVII - Static Red */
 @keyframes staticred {
-    0% { color: #ce2d2d; }
-    10% { color: #ce2d2d; }
-    20% { color: #ce2d2d; }
-    30% { color: #ce2d2d; }
-    40% { color: #ce2d2d; }
-    50% { color: #ce2d2d; }
-    60% { color: #ce2d2d; }
-    70% { color: #ce2d2d; }
-    80% { color: #ce2d2d; }
-    90% { color: #ce2d2d; }
-    100% { color: #ce2d2d; }
+    0% { color: #FF0000; }
+    10% { color: #FF0000; }
+    20% { color: #FF0000; }
+    30% { color: #FF0000; }
+    40% { color: #FF0000; }
+    50% { color: #FF0000; }
+    60% { color: #FF0000; }
+    70% { color: #FF0000; }
+    80% { color: #FF0000; }
+    90% { color: #FF0000; }
+    100% { color: #FF0000; }
 }
 
-/* Static gold */
+/* Harry_McKenzie - Static gold */
 @keyframes staticgold {
     0% { color: #a17d2e; }
     10% { color: #a17d2e; }
@@ -510,6 +874,36 @@ div.message > div.msg > div.from > span.un {
     80% { color: #a17d2e; }
     90% { color: #a17d2e; }
     100% { color: #a17d2e; }
+}
+
+/* Chicbreeze - Static Beige(?) */
+@keyframes staticbeige {
+    0% { color: #fff6d6; }
+    10% { color: #fff6d6; }
+    20% { color: #fff6d6; }
+    30% { color: #fff6d6; }
+    40% { color: #fff6d6; }
+    50% { color: #fff6d6; }
+    60% { color: #fff6d6; }
+    70% { color: #fff6d6; }
+    80% { color: #fff6d6; }
+    90% { color: #fff6d6; }
+    100% { color: #fff6d6; }
+}
+
+/* AnUglyTurtle - Static Purple */
+@keyframes staticpurple {
+    0% { color: #ff0feb; }
+    10% { color: #ff0feb; }
+    20% { color: #ff0feb; }
+    30% { color: #ff0feb; }
+    40% { color: #ff0feb; }
+    50% { color: #ff0feb; }
+    60% { color: #ff0feb; }
+    70% { color: #ff0feb; }
+    80% { color: #ff0feb; }
+    90% { color: #ff0feb; }
+    100% { color: #ff0feb; }
 }
 
 /* Static yellow */
