--- a/Test/main.css
+++ b/Test/main.css
@@ -1,4 +1,4 @@
-@import url("https://raw.githack.com/ejox/xQcJungle.github.io/master/badges.css");
+@import url("https://raw.githack.com/ejox/xQcJungle.github.io/master/Test/badges.css");
 
 /* main */
 /* Icon fix :before */
