--- a/main.css
+++ b/main.css
@@ -421,7 +421,7 @@ div.message > div.msg > div.from > span.un {
     background: url("https://i.imgur.com/tAGatAc.png") no-repeat !important;
 }
 
-#user-lists .list.room .user[data-uid="37224716"] .meta.is-staff .name .role .icon-chat-manager {
+#user-lists .list.room .user[data-uid="37224716"] .meta.is-staff .name {
     color: #14b866 !important;
 }
 
