--- a/badges.css
+++ b/badges.css
@@ -489,6 +489,46 @@
     transition: 0.4s;
 }
 
+/* AnUglyTurtle */
+#chat-messages .id-5049254 .badge-box {
+    width: 30px;
+    height: 30px;
+    transition: 0.5s;
+}
+
+#chat-messages .id-5049254 .badge-box:hover {
+    width: 65px;
+    height: 65px;
+    transition: 0.5s;
+}
+
+/*User Badge*/
+#user-rollover.id-5049254 .badge-box i.bdg,
+#chat-messages .id-5049254 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/Ci6Qrxu.png");
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    background-position: initial;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+/*User Background*/
+.cm.id-5049254::before {
+    background-image: url("");
+    background-repeat: no-repeat;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.1;
+    z-index: -1;
+    transition: 0.4s;
+}
+
 /* Ageless - SCUFFED */
 #chat-messages .id-37174830 .badge-box {
     width: 30px;
