Might as well try this in case it actually works 4Heed

--- a/main.css
+++ b/main.css
@@ -295,7 +295,8 @@ div.message > div.msg > div.from > span.un {
 #waitlist .list .user[data-uid="3941421"] .meta.is-staff .name .icon-chat-bouncer,
 #user-rollover.id-3941421 .info .role i.icon-chat-bouncer,
 #user-lists .list.room .user.id-3941421 .icon-chat-bouncer {
-    background: url("https://i.imgur.com/iR1j7y1.png") no-repeat !important;
+    background: url("") no-repeat !important;
+    content: '＋';
 }
 #user-rollover.id-3941421 .meta .thumb {
     border-color: #90b0cf !important;
